[gd_scene load_steps=2 format=3 uid="uid://pee25h5vdlrl"]

[ext_resource type="Script" uid="uid://dt8upbou2jm8j" path="res://script/UI/item_tooltip.gd" id="1_k2vpb"]

[node name="ItemTooltip" type="PopupPanel"]
oversampling_override = 1.0
size = Vector2i(224, 122)
visible = true
mouse_passthrough = true
content_scale_size = Vector2i(250, 0)
content_scale_aspect = 4
script = ExtResource("1_k2vpb")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="NameLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
bbcode_enabled = true
text = "ádasd"
fit_content = true
autowrap_mode = 2

[node name="DescriptionLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
bbcode_enabled = true
text = "ádasda"
fit_content = true

[node name="StatsLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
bbcode_enabled = true
text = "ádasd"
fit_content = true
